copied HTML and CSS

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,136 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+.container {
+	width: 900px;
+	margin: auto;
+}
+
+header {
+	display: flex;
+}
+
+header nav {
+	margin-top: 40px;
+}
+
+header nav a {
+	margin: 0 20px;
+	color: gray;
+  text-decoration: none;
+}
+
+.logo {
+	position: relative;
+	left: 130px;
+	top: 20px;
+}
+
+.intro {
+	display: flex;
+	justify-content: space-around;
+}
+
+.left-intro {
+	padding: 80px 0;
+}
+
+.right-intro {
+	padding: 50px 0;
+}
+
+h1 {
+	font-size: 90px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+button {
+	position: relative;
+	left: 130px;
+}
+
+.top-content {
+	display: flex;
+	padding: 15px;
+}
+
+.middle-img {
+	padding: 20px 0;
+}
+
+.bottom-content {
+	display: flex;
+	padding: 15px;
+}
+
+.copyright {
+	position: relative;
+	left: 400px;
+}
