--- a/css/index.css
+++ b/css/index.css
@@ -91,9 +91,11 @@ header nav a {
 	justify-content: space-around;
   align-items: center;
   height: 450px;
+  margin-bottom: 40px;
 }
 
-.left-intro {
+.intro .left-intro {
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -101,14 +103,17 @@ header nav a {
 
 h1 {
 	font-size: 70px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
-button {button {
+button {
 	background-color: inherit;
-	border: solid black 2px;
-	height: 40px;
-	width: 145px;
-	margin: 15px 0;
+	border: solid black 1px;
+	height: 30px;
+	width: 155px;
+  margin-top: 20px;
   text-align: center;
   text-decoration: none;
 	font: inherit;
