--- a/css/index.css
+++ b/css/index.css
@@ -75,9 +75,26 @@ header {
   margin: 20px 0;
 }
 
+@media (max-width: 800px) {
+  header {
+    flex-direction: column-reverse;
+  }
+}
+
 header nav {
 	display: flex;
   align-items: center;
+}
+
+@media (max-width: 800px) {
+  header nav {
+    justify-content: space-between;
+  }
+
+  .logo {
+    align-self: center;
+    margin: 20px 0;
+  }
 }
 
 header nav a {
@@ -90,8 +107,18 @@ header nav a {
 	display: flex;
 	justify-content: space-around;
   align-items: center;
-  height: 450px;
   margin-bottom: 40px;
+}
+
+
+@media (max-width: 800px) {
+  .intro {
+    justify-content: center;
+  }
+
+  .code {
+    display: none;
+  }
 }
 
 .intro .left-intro {
@@ -121,8 +148,21 @@ button {
 
 .top-content {
 	display: flex;
-  justify-content: space-between;
 	padding: 30px 0;
+}
+
+@media (max-width: 800px) {
+  .middle-img {
+    width: 100%; 
+  }
+}
+
+.features {
+  width: 49%;
+}
+
+.about {
+  width: 49%;
 }
 
 .middle-img {
