--- a/css/index.css
+++ b/css/index.css
@@ -64,9 +64,9 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
-.container {
-	width: 900px;
-	margin: auto;
+body {
+  max-width: 900px;
+  margin: 10px;
 }
 
 header {
@@ -153,7 +153,7 @@ button {
 
 @media (max-width: 800px) {
   .middle-img {
-    width: 100%; 
+    width: 100%;
   }
 }
 
@@ -187,6 +187,5 @@ button {
 }
 
 .copyright {
-	position: relative;
-	left: 400px;
+  text-align: center;
 }
