--- a/css/index.css
+++ b/css/index.css
@@ -97,10 +97,26 @@ header nav {
   }
 }
 
+@media (max-width: 500px) {
+  header nav {
+    flex-direction: column;
+    align-content: center;
+  }
+}
+
 header nav a {
 	margin: 0 60px 0 0;
 	color: gray;
   text-decoration: none;
+}
+
+@media (max-width: 500px) {
+  header nav a {
+    margin: 0;
+    padding: 20px 0;
+    border-bottom: 1px solid black;
+    width: 100%;
+  }
 }
 
 .intro {
