--- a/css/index.css
+++ b/css/index.css
@@ -100,7 +100,6 @@ header nav {
 @media (max-width: 500px) {
   header nav {
     flex-direction: column;
-    align-content: center;
   }
 }
 
@@ -125,7 +124,6 @@ header nav a {
   align-items: center;
   margin-bottom: 40px;
 }
-
 
 @media (max-width: 800px) {
   .intro {
@@ -165,6 +163,7 @@ button {
 .top-content {
 	display: flex;
 	padding: 30px 0;
+  justify-content: space-between;
 }
 
 @media (max-width: 800px) {
@@ -173,12 +172,11 @@ button {
   }
 }
 
-.features {
-  width: 49%;
-}
-
-.about {
-  width: 49%;
+@media (max-width: 500px) {
+  .top-content {
+    display: inline;
+    width: 100%;
+  }
 }
 
 .middle-img {
@@ -187,19 +185,15 @@ button {
 
 .bottom-content {
 	display: flex;
-  justify-content: space-between;
 	padding: 30px 0;
+  justify-content: center;
 }
 
-.services {
-  width: 32%;
-}
-
-.product {
-  width: 32%;
-}
-.vision {
-  width: 32%;
+@media (max-width: 500px) {
+  .bottom-content {
+    display: inline;
+    width: 100%;
+  }
 }
 
 .copyright {
